<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="todo"
            type="com.learn.todoapp.domain.models.ToDo" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_large"
        tools:context=".presentation.create.CreateOrUpdateTodoFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/title"
            android:text="@{todo.title}"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:hint="@string/hh_mm"
            app:displayTime="@{todo}"
            app:layout_constraintBottom_toTopOf="@id/rg_todo_type"
            app:layout_constraintEnd_toStartOf="@+id/tv_date"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/dd_mm_yyyy"
            app:displayDate="@{todo.date}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_time"
            app:layout_constraintTop_toTopOf="@id/tv_time" />

        <RadioGroup
            android:id="@+id/rg_todo_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radio_daily"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/radio_daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/daily" />

            <RadioButton
                android:id="@+id/radio_weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/weekly" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/et_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/description"
            android:text="@{todo.description}"

            app:layout_constraintBottom_toTopOf="@id/tv_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_title" />

        <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_create_todo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/create_todo"
                    android:src="@android:drawable/ic_menu_save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>